# rohang25_packages

./: README.md
geolocation_kf_25/: CMakeLists.txt  CMakeLists_org.txt  package.xml  package_org.xml
geolocation_kf_25/include/geolocation_kf_25/: console_color_definition.h  console_print.h  kalmanfilter.h  uav_manage.h  uav_status.h
geolocation_kf_25/src/: console_print.cpp  geolocation_kf_node  geolocation_kf_node.cpp  kalmanfilter.cpp  kalmanfilter_pl_node.cpp  uav_manage.cpp  uav_status.cpp
gimbal_control_25/: CMakeLists.txt  package.xml
gimbal_control_25/src/: gimbal.c  gimbal_control_node.cpp  gimbal_control_node_edited.cpp  gimbal_control_node_real.cpp  gimbal_tilt_90.cpp  gombal_off90.cpp
rohang25/: CMakeLists.txt  package.xml
rohang25/include/rohang25/: config.h  control.h  frame.h  global_def.h  guidance.h  log.h  mission.h
rohang25/src/: control.cpp  frame.cpp  guidance.cpp  log.cpp  main_offboard.cpp
rohang25_test/: CMakeLists.txt  package.xml
rohang25_test/include/rohang25_test/: algebra.h  config.h  control.h  global_def.h  guidance.h  log.h  mission.h
rohang25_test/launch/: rohang25_test.launch.py
rohang25_test/src/: algebra.cpp  control.cpp  guidance.cpp  log.cpp  main_offboard.cpp
rohang25_test/srv/: SetGuidanceParam.srv
yolov11/install/: local_setup.sh  setup.sh
yolov11/install/yolov11/lib/yolov11/: yolov11_node
yolov11/install/yolov11/share/yolov11/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
yolov11/install/yolov11_msgs/include/yolov11_msgs/yolov11_msgs/msg/: detection.h  detection.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
yolov11/install/yolov11_msgs/include/yolov11_msgs/yolov11_msgs/msg/detail/: detection__builder.hpp  detection__functions.h  detection__rosidl_typesupport_fastrtps_c.h  detection__rosidl_typesupport_fastrtps_cpp.hpp  detection__rosidl_typesupport_introspection_c.h  detection__rosidl_typesupport_introspection_cpp.hpp  detection__struct.h  detection__struct.hpp  detection__traits.hpp  detection__type_support.h  detection__type_support.hpp
yolov11/install/yolov11_msgs/local/lib/python3.10/dist-packages/yolov11_msgs/: __init__.py  _yolov11_msgs_s.ep.rosidl_typesupport_c.c  _yolov11_msgs_s.ep.rosidl_typesupport_fastrtps_c.c  _yolov11_msgs_s.ep.rosidl_typesupport_introspection_c.c
yolov11/install/yolov11_msgs/local/lib/python3.10/dist-packages/yolov11_msgs-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
yolov11/install/yolov11_msgs/local/lib/python3.10/dist-packages/yolov11_msgs/msg/: __init__.py  _detection.py  _detection_s.c
yolov11/install/yolov11_msgs/share/ament_index/resource_index/package_run_dependencies/: yolov11_msgs
yolov11/install/yolov11_msgs/share/ament_index/resource_index/parent_prefix_path/: yolov11_msgs
yolov11/install/yolov11_msgs/share/ament_index/resource_index/rosidl_interfaces/: yolov11_msgs
yolov11/install/yolov11_msgs/share/yolov11_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
yolov11/install/yolov11_msgs/share/yolov11_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_yolov11_msgs__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  yolov11_msgsConfig-version.cmake  yolov11_msgsConfig.cmake  yolov11_msgs__rosidl_typesupport_cExport.cmake  yolov11_msgs__rosidl_typesupport_cppExport-noconfig.cmake  yolov11_msgs__rosidl_typesupport_introspection_cExport.cmake  yolov11_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
yolov11/install/yolov11_msgs/share/yolov11_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
yolov11/install/yolov11_msgs/share/yolov11_msgs/msg/: Detection.idl  Detection.msg
yolov11/log/: latest_build
yolov11/src/yolov11/: package.xml  setup.cfg  setup.py
yolov11/src/yolov11/yolov11/: yolov11_node.py
yolov11_msgs/: CMakeLists.txt
yolov11_msgs/msg/: Detection.msg
