<?xml version="1.0"?>
<package format="3">
  <name>gimbal_control_25</name>
  <version>0.1.0</version>
  <description>ZR10 짐벌을 UDP로 제어하는 ROS 2 노드</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 시 필요한 의존성 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>px4_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>yolov11_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- 실행 시 필요한 의존성 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- 테스트 용 (선택사항) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- export 안 써도 무방하지만, 명시적으로 표기 가능 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

